@@ -41,6 +41,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.security:spring-security-oauth2-resource-server'
 	implementation group: 'com.c4-soft.springaddons', name: 'spring-addons-starter-oidc', version: '7.1.8'
+	implementation group: 'com.c4-soft.springaddons', name: 'spring-addons-starter-oidc-test', version: '7.8.10'
 }
 
 tasks.named('test') {
@@ -59,6 +60,14 @@ tasks.create("smallTest", Test) {
 tasks.create("mediumTest", Test) {
 	useJUnitPlatform({
 		includeTags 'medium'
+	})
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
+	mustRunAfter check
+}
+
+tasks.create("largeTest", Test) {
+	useJUnitPlatform({
+		includeTags 'large'
 	})
 	jvmArgs("-XX:+EnableDynamicAgentLoading")
 	mustRunAfter check
